--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,16 @@
 @import 'tailwindcss';
 
 body {
-	@apply bg-gradient-to-r from-pink-100 via-white to-blue-100 text-gray-800 antialiased;
+	@apply dark:bg-slate-900 bg-slate-100 text-slate-800 dark:text-slate-50 antialiased px-8 mt-36;
 	font-family: 'Lexend', sans-serif;
+	scroll-behavior: smooth;
 }
 h1 {
 	@apply text-4xl font-extrabold mb-4;
+}
+
+h2 {
+	@apply self-center text-7xl;
 }
 
 h3 {
@@ -16,26 +21,14 @@ p {
 	@apply leading-relaxed;
 }
 
-.container {
-	@apply mx-auto max-w-4xl p-8;
-}
-
 section {
-	@apply bg-white p-6 rounded-lg shadow-md mb-8;
+	@apply bg-slate-50 dark:bg-slate-800 p-6 shadow-md min-h-96 rounded-xl my-4;
 }
 
 ul {
-	@apply list-disc list-inside ml-4;
+	@apply list-disc list-inside m-4;
 }
 
 a {
-	@apply text-blue-500 hover:underline;
-}
-
-button {
-	@apply bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition-colors duration-300;
-}
-
-.glass {
-	@apply bg-white backdrop-filter backdrop-blur-lg rounded-lg shadow-lg;
+	@apply text-orange-400;
 }
