--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 
 body {
-	@apply dark:bg-slate-900 bg-slate-100 text-slate-800 dark:text-slate-50 antialiased px-8 mt-36;
+	@apply dark:bg-slate-900 bg-slate-100 text-slate-800 dark:text-slate-50 antialiased px-8;
 	font-family: 'Lexend', sans-serif;
 	scroll-behavior: smooth;
 }
