--- a/src/app.css
+++ b/src/app.css
@@ -1,47 +1,34 @@
 @import 'tailwindcss';
 
 body {
-	@apply dark:bg-slate-900 bg-slate-100 text-slate-800 dark:text-slate-50 antialiased;
-	font-family: 'Lexend', sans-serif;
-	scroll-behavior: smooth;
+	@apply text-slate-600 dark:text-slate-50 bg-slate-50 dark:bg-slate-800 px-16 py-8;
 }
+
 h1 {
-	@apply text-4xl font-extrabold mb-4;
+	@apply text-5xl;
 }
 
 h2 {
-	@apply text-2xl font-bold mb-2;
+	@apply text-4xl;
 }
 
 h3 {
-	@apply text-xl;
-}
-
-p {
-	@apply leading-relaxed;
-}
-
-section {
-	@apply bg-slate-50 dark:bg-slate-800 p-6 shadow-md rounded-xl my-4;
-}
-
-ul {
-	@apply list-disc list-inside m-4;
-}
-
-a {
-	@apply text-indigo-400;
+	@apply text-3xl;
 }
 
 button,
 .care-button {
-	@apply px-6 py-2 rounded-lg shadow-lg cursor-pointer transition ease-in-out bg-slate-500  hover:bg-orange-500 text-slate-50;
+	@apply border border-slate-500 px-2 uppercase rounded-md cursor-pointer transition;
 }
 
-.care-button {
-	@apply hover:bg-red-700;
+.care-button:hover {
+	@apply bg-red-500 border-red-500;
 }
 
-input {
-	@apply rounded-md dark:border shadow-2xl p-2;
+section {
+	@apply border border-slate-500 p-4 min-h-40 bg-slate-100 dark:bg-slate-900 my-4;
+}
+
+a {
+	@apply font-bold border p-2 w-full text-center;
 }
