--- a/src/app.css
+++ b/src/app.css
@@ -57,3 +57,7 @@ a {
 a:hover {
 	@apply bg-slate-900 border-slate-900 text-slate-50;
 }
+
+option {
+	@apply text-slate-800 dark:bg-slate-800 dark:text-slate-50;
+}
